[package]
name = "fungible-token"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.4"
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0.17"
log = "0.4.28"
num-bigint = "0.4.3"
num-traits = "0.2.16"

[dev-dependencies]
linera-sdk = { version = "0.15.4", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "fungible_token_contract"
path = "src/contract.rs"

[[bin]]
name = "fungible_token_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
